[project]
name = "explainable-ml-shap"
version = "0.1.0"
description = ""
authors = [
    {name = "Avik Basu",email = "avikbasu93@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
